# dupont

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  PKGBUILD  README.md  clippy.toml  rustfmt.toml  snapcraft.yaml
.planning/: .continue-here.md  HANDOFF.json  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/phases/01-core-engine/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-03-PLAN.md  01-03-SUMMARY.md  01-UAT.md  01-VERIFICATION.md
.planning/phases/02-desktop-environment-integration/: 02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  02-02-SUMMARY.md  02-RESEARCH.md  02-REVIEW-FIX.md  02-REVIEW.md  02-VALIDATION.md  02-VERIFICATION.md
.planning/phases/03-ui-layer-implementation/: 03-01-PLAN.md  03-01-SUMMARY.md  03-02-PLAN.md  03-02-SUMMARY.md  03-CONTEXT.md  03-DISCUSSION-LOG.md  03-RESEARCH.md  03-UAT.md  03-UI-SPEC.md  03-VALIDATION.md
.planning/phases/04-integration-and-polish/: 04-01-PLAN.md  04-01-SUMMARY.md  04-02-PLAN.md  04-02-SUMMARY.md
.planning/phases/05-packaging/: 05-01-PLAN.md  05-01-SUMMARY.md  05-02-PLAN.md  05-02-SUMMARY.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
app/: Cargo.toml
app/src/: app.rs  config.rs  main.rs  messages.rs
app/src/widgets/: controls.rs  mod.rs  preview.rs  settings.rs
data/: com.damask.Wallpaper.desktop  io.github.parkiyong.dupont.desktop  io.github.parkiyong.dupont.metainfo.xml
domain/: Cargo.toml
domain/src/: cache.rs  desktop.rs  error.rs  lib.rs  source.rs  wallpaper.rs
domain/src/desktop/: cosmic.rs  gnome.rs  mod.rs  portal.rs  windows.rs
domain/src/sources/: bing.rs  mod.rs  spotlight.rs
flatpak/: cargo-sources.json  io.github.parkiyong.dupont.json  io.github.parkiyong.dupont.yml
src/: lib.rs  main.rs
src/app/: app.rs  config.rs  messages.rs  mod.rs  window.rs
src/application/: mod.rs
src/application/dto/: mod.rs  settings_dto.rs  wallpaper_dto.rs
src/application/ports/: config_repository.rs  image_cache.rs  mod.rs
src/application/use_cases/: fetch_and_set_wallpaper.rs  fetch_wallpaper.rs  mod.rs  set_wallpaper.rs
src/domain/: cache.rs  error.rs  mod.rs  source.rs  wallpaper.rs
src/domain/desktop/: linux.rs  mod.rs  windows.rs
src/domain/entities/: mod.rs  wallpaper.rs
src/domain/errors/: cache_error.rs  de_error.rs  mod.rs  source_error.rs
src/domain/sources/: bing.rs  spotlight.rs
src/domain/traits/: desktop_environment.rs  mod.rs  source.rs
src/domain/value_objects/: cache_config.rs  mod.rs  source_id.rs
src/infrastructure/: mod.rs
src/infrastructure/desktop/: linux.rs  mod.rs  windows.rs
src/infrastructure/http/: client.rs  mod.rs
src/infrastructure/persistence/: cache_repo.rs  config_repo.rs  mod.rs
src/presentation/: app.rs  messages.rs  mod.rs  state.rs
