[workspace]
members = ["domain", "app"]
resolver = "2"

[workspace.dependencies]
# Core dependencies shared across workspace
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.51", features = ["rt-multi-thread", "macros", "fs"] }
reqwest = { version = "0.12", features = ["json"] }
thiserror = "2.0"
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "webp"] }
dirs = "5.0"
ashpd = "0.10"
gio = "0.20"
