[package]
name = "dupont"
version = "1.3.0"
edition = "2024"
description = "A native desktop wallpaper app for Bing WOTD and Microsoft Spotlight"
license = "GPL-3.0"
repository = "https://github.com/parkiyong/dupont"

[[bin]]
name = "dupont"
path = "src/main.rs"

[dependencies]
iced = { version = "0.14", features = ["image", "lazy", "tokio"] }
iced_widget = "0.14"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.51", features = ["rt-multi-thread", "macros", "fs"] }
async-trait = "0.1"
reqwest = { version = "0.12", features = ["json"] }
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "webp"] }
thiserror = "2.0"
dirs = "5.0"
log = "0.4"
env_logger = "0.11"
futures = "0.3"

[target.'cfg(target_os = "linux")'.dependencies]
wallpaper = "3"

[target.'cfg(target_os = "windows")'.dependencies]
wallpaper = "3"