[package]
name = "dupont-app"
version = "0.1.0"
edition = "2024"

[dependencies]
relm4 = { version = "0.11", features = ["libadwaita", "gnome_49"] }
gtk = { version = "0.11", package = "gtk4" }
adw = { version = "0.9", package = "libadwaita" }
domain = { path = "../domain", package = "dupont-domain" }
gio = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
dirs = { workspace = true }
anyhow = { workspace = true }
