[package]
name = "dupont-app"
version = "1.2.0"
edition = "2024"

[[bin]]
name = "dupont"
path = "src/main.rs"

[dependencies]
relm4 = { version = "0.11" }
gtk = { version = "0.11", package = "gtk4", features = ["v4_12"] }
domain = { path = "../domain", package = "dupont-domain" }
gio = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
dirs = { workspace = true }
anyhow = "1.0"
cfg-if = "1.0"
