[package]
name = "dupont-domain"
version = "1.2.0"
edition = "2024"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }
thiserror = { workspace = true }
image = { workspace = true }
dirs = { workspace = true }
async-trait = "0.1"

[target.'cfg(target_os = "linux")'.dependencies]
ashpd = { workspace = true }
gio = { workspace = true }

[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_UI_Shell", "Win32_Foundation", "Win32_System_Com"] }
